argocd/k8s-manifest/myapp/myapp-deployment-hpa-service.yaml
# Deployment for myapp
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: myapp # You can change this to your specific namespace
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: docker.io/jamaldevsecops/myapp
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        #resources:
          #requests:
            #memory: "16Mi"
            #cpu: "50m"
          #limits:
            #memory: "1Gi"
            #cpu: "1"
      #imagePullSecrets:
      #- name: mydockerhub-creds
---
# Service for myapp
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: myapp
  labels:
    app: myapp
spec:
  type: ClusterIP  
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 3000            
      targetPort: 3000
